--- a/index.html
+++ b/index.html
@@ -9,18 +9,41 @@
     <title>Calculadora</title>
 </head>
 <body>
->
     <div class="container">
-        <div class="carcaca">
+        <div class="calculadoraCorpo">
             <div class="tela">
-
+                <input type="text" id="tela"/>
             </div>
-            <div class="botoes">
-
+            <div class="button" id="botoes">
+                
+                <input type="button" value="7" />
+                <input type="button" value="8"/>
+                <input type="button" value="9"/>
+                <input type="button" value="*"/>
+            
+            </div>
+            <div class="button" id="botoes">
+                <input type="button" value="4" />
+                <input type="button" value="5"/>
+                <input type="button" value="6"/>
+                <input type="button" value="-"/>
+            </div>
+            <div class="button" id="botoes">
+                <input type="button" value="1" />
+                <input type="button" value="2"/>
+                <input type="button" value="3"/>
+                <input type="button" value="+"/>
+            </div>
+            <div class="button" id="botoes">
+                <input type="button" value="C"/>
+                <input type="button" value="0" />
+                <input type="button" value="="/>
+                <input type="button" value="/"/>
             </div>
         </div>
     </div>
-</table>
+
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
